Overview of Changes in AGS 1.2.0
================================

* Audio input support for all common backends like ALSA, OSS4, JACK and
  Pulseaudio. 
* New widget AgsPiano available. It is an accessible widget which draws
  a piano. It has events like ::key-pressed, ::key-released and ::key-clicked.
* New widget AgsNotebook available. It is has been moved from libgsequencer to
  libags-gui. It was refactored to be generic.

Overview of Changes in AGS 1.0.0
================================

* Sticky controls allows you to adjust multiple controls at once.
* Various bug-fixes especially improved Lv2ui syncing controls.

Overview of Changes in AGS 1.0.0-beta
================================

* Experimental XMLRPC-C service prototype.

Overview of Changes in AGS 0.9.29
================================

* New automation editor dialogs to select or ramp acceleration.
* New editor dialog to select notes.

Overview of Changes in AGS 0.9.28
================================

* all functional tests pass now again, since  gtk_main() integration.

Overview of Changes in AGS 0.9.26
================================

* full gtk_main() support you might want to run it by calling
  ags_gui_thread_do_run().

Overview of Changes in AGS 0.9.24
================================

* Support for LADSPA_PATH, DSSI_PATH and LV2_PATH environment variables
* Core-audio audio unit backend in order to port the application to
  Apple OS X.

Overview of Changes in AGS 0.9.10
================================

* Pulseaudio sink support. AgsPulseDevout has got a bigger ring-buffer
  to avoid caching and allow slower write functions.

Overview of Changes in AGS 0.9.8
================================

* You may now specify base note of AgsSynth or AgsSyncsynth.

Overview of Changes in AGS 0.9.7
================================

* Implemented new functions to handle LV2_Event_Buffer. Note the old
  functions to do so are deprecated and are incompatible to the
  newer API.