@@ -31,4 +31,8 @@
 void ags_notation_editor_machine_changed_callback(AgsMachineSelector *machine_selector, AgsMachine *machine,
 						  AgsNotationEditor *notation_editor);
 
+void ags_notation_editor_set_pads_callback(AgsAudio *audio, GType channel_type,
+					   guint pads, guint pads_old,
+					   AgsNotationEditor *notation_editor);
+
 #endif /*__AGS_NOTATION_EDITOR_CALLBACKS_H__*/
