@@ -19,6 +19,8 @@
 
 #include <ags/X/editor/ags_notation_edit_callbacks.h>
 
+#include <ags/X/ags_notation_editor.h>
+
 #include <ags/libags.h>
 #include <ags/libags-audio.h>
 #include <ags/libags-gui.h>
@@ -78,6 +80,20 @@ ags_notation_edit_drawing_area_key_release_event(GtkWidget *widget, GdkEventKey 
 void
 ags_notation_edit_vscrollbar_value_changed(GtkRange *range, AgsNotationEdit *notation_edit)
 {
+  AgsNotationEditor *notation_editor;
+
+  GtkAdjustment *piano_adjustment;
+  
+  notation_editor = gtk_widget_get_ancestor(notation_edit,
+					    AGS_TYPE_NOTATION_EDITOR);
+
+  g_object_get(notation_editor->scrolled_piano->viewport,
+	       "vadjustment", &piano_adjustment,
+	       NULL);
+  gtk_adjustment_set_value(piano_adjustment,
+			   range->adjustment->value);
+  gtk_widget_queue_draw(notation_editor->scrolled_piano->piano);
+
   /* queue draw */
   gtk_widget_queue_draw(notation_edit->drawing_area);
 }
