@@ -35,11 +35,11 @@
 #define AGS_PIANO_GET_CLASS(obj)      (G_TYPE_INSTANCE_GET_CLASS((obj), AGS_TYPE_PIANO, AgsPianoClass))
 
 #define AGS_PIANO_DEFAULT_BASE_NOTE AGS_PIANO_KEYS_OCTAVE_0_C
+#define AGS_PIANO_DEFAULT_BASE_KEY_CODE (0)
 
 #define AGS_PIANO_DEFAULT_KEY_WIDTH (60)
 #define AGS_PIANO_DEFAULT_KEY_HEIGHT (14)
 
-#define AGS_PIANO_DEFAULT_BASE_KEY_CODE (0)
 #define AGS_PIANO_DEFAULT_KEY_COUNT (128)
 
 typedef struct _AgsPiano AgsPiano;
